--- a/index.html
+++ b/index.html
@@ -4,42 +4,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://rsms.me/">
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0" />
-    <link rel="stylesheet" href="index.css">
-    <script defer src="index.js"></script>
-    <title>Namormo Image Converter</title>
-    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+    <title>Image Converter</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <style>@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');</style>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="logic.js"></script>
+    <link rel="shortcut icon" href="logo.png" type="image/png">
 </head>
 
 <body>
 
-    <!-- header -->
     <header>
-        <img src="logo.png" alt="logo">
-        <p>Namormo Image Converter</p>
+        <nav>
+            <div>
+                <img src="logo.png" alt="logo" onclick="window.location.href='index.html'">
+                <h1>Image Converter</h1>
+            </div>
+            <button onclick="window.open('mailto:aryannagarco@gmail.com', '_blank')">Contact<span class="material-symbols-outlined">arrow_forward</span></button>
+        </nav>
     </header>
 
-    <!-- container -->
-    <div id="container">
-        <label for="file_input" id="label_button"><span class="material-symbols-outlined">upload_file</span>Upload Image</label>
-        <input type="file" id="file_input" accept="image/png, image/jpeg, image/webp" hidden>
-        <canvas id="image_canvas"></canvas>
-        <div>
-            <button id="download_button"><span class="material-symbols-outlined">download</span>Convert & Download</button>
-            <select id="format_select">
-                <option value="png">PNG</option>
-                <option value="jpeg">JPEG/JPG</option>
-                <option value="webp">WEBP</option>
-            </select>
-        </div>
+    <div id="con01">
+        <p>Convert image in between JPEG, JPG, PNG, WEBP and other supported formats.</p>
     </div>
 
-    <!-- footer -->
+    <div id="con02">
+        <input type="file" id="file_input" accept="image/png, image/jpeg, image/webp" hidden>
+        <label for="file_input"><span class="material-symbols-outlined">imagesmode</span>Upload Image</label>
+        <canvas id="image_canvas"></canvas>
+    </div>
+
+    <div id="con03">
+        <p>Select the format for the image you want to download.</p>
+        <select id="format_select">
+            <option value="png">PNG</option>
+            <option value="jpeg">JPEG/JPG</option>
+            <option value="webp">WEBP</option>
+        </select>
+        <button id="download_button"><span class="material-symbols-outlined">download</span>Convert & Download</button>
+    </div>
+
     <footer>
-        <p>Namormo © 2025</p>
-        <a href="mailto:namormo@yahoo.com">namormo@yahoo.com</a>
+        <p onclick="window.location.href='https://aryannagar.vercel.app'">Aryan Nagar © 2025</p>
     </footer>
 
 </body>
