--- a/index.html
+++ b/index.html
@@ -36,12 +36,20 @@
 
     <div id="con03">
         <p>Select the format for the image you want to download.</p>
-        <select id="format_select">
-            <option value="png">PNG</option>
-            <option value="jpeg">JPEG/JPG</option>
-            <option value="webp">WEBP</option>
-        </select>
+        <span id="se-co">
+            <select id="format_select">
+                <option value="png">PNG</option>
+                <option value="jpeg">JPEG/JPG</option>
+                <option value="webp">WEBP</option>
+            </select>
+        </span>
         <button id="download_button"><span class="material-symbols-outlined">download</span>Convert & Download</button>
+    </div>
+
+    <div id="con04">
+        <h2>Details</h2>
+        <p>Upload the file (blue button), select the desired format from slector, click on download (green) button.</p>
+        <p>This application is open source, client side only, and I don't collect anything.</p>
     </div>
 
     <footer>
